<resources>
    <string name="app_name">圈圈足球</string>
    <string name="main_topbar_title">圈圈足球</string>
    <string name="main_btn_login">登录</string>
    <string name="main_btn_register">注册</string>
    <string name="main_help_text">圈圈足球</string>
    <string name="main_tab_bar_title">主页</string>
    <string name="main_tab_bar_menu_title">更多功能</string>
    <string name="my_team">我的球队</string>
    <string name="team_gallery">球队相册</string>
    <string name="chat">聊天</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="cancel">取消</string>
    <string name="select_time">日期选择</string>
    <string name="save">保存</string>
    <string name="yuan">元</string>
    <string name="error_version_number_wrong">版本号错误</string>
    <string name="create_team">创建球队</string>
    <string name="find_team">查找球队</string>
    <string name="select_team">选择球队</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <string name="select_location">选择地区</string>
    <string name="local_team">本地球队</string>
    <string name="publish_game">发起活动</string>
    <string name="no_team_1">还没有加入球队？</string>
    <string name="no_team_2">请先</string>
    <string name="no_team_3">或</string>
    <string name="no_team_4">通过</string>
    <string name="no_team_5">选择加入</string>
    <string name="no_team_6">一个球队</string>
    <string name="no_game_1">还没有球队内部活动？</string>
    <string name="no_game_2">请</string>
    <string name="latest_team_news">球队最新动态</string>
    <string name="team_name">球队名称：</string>
    <string name="team_captain">球队队长： </string>
    <string name="team_members">球队人数： </string>
    <string name="team_establish_day">成立时间： </string>
    <string name="financial_statistics">财务统计： </string>
    <string name="duty_statistics">出勤概况： </string>
    <string name="duty_detail">实际出勤13人，王哥放鸽子1次。</string>
    <string name="team_default_establish_day">2015年9月22日</string>
    <string name="main_game_publisher">【球队召集】</string>
    <string name="main_game_address">地址：</string>
    <string name="main_game_datetime">时间：</string>
    <string name="main_game_type">类型：</string>
    <string name="registering">报名中</string>
    <string name="registered">报名结束</string>
    <string name="canceled">已取消</string>
    <string name="hint_username">请输入用户名/手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="txt_forget_password">忘记密码</string>
    <string name="txt_login">登陆</string>
    <string name="txt_register">注册</string>
    <string name="hint_location">请选择地区</string>
    <string name="hint_phone_number">请输入手机号码</string>
    <string name="hint_phone_verify_code">请输入手机验证码</string>
    <string name="hint_password_retype">请再次输入密码</string>
    <string name="txt_get_verify_code">获取验证码</string>
    <string name="txt_qqzq_agreement">我已阅读并同意《圈圈足球协议》</string>
    <string name="confirm">确定</string>
    <string name="hint_new_password">请输入新的密码</string>
    <string name="hint_new_password_retype">请再次输入新的密码</string>
    <string name="txt_selected_location">已选地区</string>
    <string name="create_team_title_1">球队头像</string>
    <string name="create_team_title_2">球队名称</string>
    <string name="create_team_hint_2">请输入十五字以内</string>
    <string name="create_team_title_3">球队ID</string>
    <string name="create_team_hint_3">请输入字母或数字</string>
    <string name="create_team_title_4">常活动地点</string>
    <string name="create_team_title_4_1">省(市）</string>
    <string name="create_team_title_4_2">市(区)</string>
    <string name="create_team_hint_4">建议具体到市区级</string>
    <string name="create_team_title_5">常活动类型</string>
    <string name="create_team_5_5p">5人制</string>
    <string name="create_team_5_7p">7人制</string>
    <string name="create_team_5_9p">9人制</string>
    <string name="create_team_5_11p">11人制</string>
    <string name="create_team_title_6">入队验证</string>
    <string name="create_team_6_join_team_1">任何人</string>
    <string name="create_team_6_join_team_2">需审核</string>
    <string name="create_team_title_7">球队介绍</string>
    <string name="create_team_7_hint">请输入对球队的简介......</string>
    <string name="find_team_team_name">球队名称：</string>
    <string name="find_team_team_captain">球队队长： </string>
    <string name="find_team_team_members">球队人数： </string>
    <string name="find_team_establish_day">成立时间： </string>
    <string name="my_team_top_menu_1">球队管理</string>
    <string name="my_team_top_menu_2">球队内部活动</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">从手机相册选择</string>
    <string name="cancel_photo">取消</string>
    <string name="team_detail_name">球队名称：</string>
    <string name="team_detail_captain">队长：</string>
    <string name="team_detail_attendance_count">球队活动次数：</string>
    <string name="team_detail_personal_score">球队积分：</string>
    <string name="team_detail_location">常活动地点：</string>
    <string name="team_detail_establish_date">成立时间：</string>
    <string name="team_detail_member">球队成员</string>
    <string name="team_detail_game_list">球队活动列表</string>
    <string name="team_detail_rule">球队管理章程</string>
    <string name="team_detail_gallery">球队相册</string>
    <string name="team_detail_description">球队简介</string>
    <string name="join_team">申请加入</string>
    <string name="game_title">活动标题</string>
    <string name="game_title_hint">请输入十五字以内...</string>
    <string name="game_location">活动地点</string>
    <string name="game_date">活动日期</string>
    <string name="game_time">活动时间</string>
    <string name="game_type">活动类型</string>
    <string name="game_type_private">球队内部活动</string>
    <string name="game_type_public">公开活动</string>
    <string name="game_court_type">场地类型</string>
    <string name="soccer_person_type_5">5人制</string>
    <string name="soccer_person_type_7">7人制</string>
    <string name="soccer_person_type_9">9人制</string>
    <string name="soccer_person_type_11">11人制</string>
    <string name="eat_and_play">吃喝玩乐</string>
    <string name="game_pay">活动费用</string>
    <string name="game_pay_average">总价分摊</string>
    <string name="game_pay_average_hint">总价/场</string>
    <string name="game_pay_fixed">固定单价</string>
    <string name="game_pay_fixed_hint">单价/人</string>
    <string name="game_pay_member_charge">会员费用记账支付</string>
    <string name="game_pay_member_charge_hint">总价/场</string>
    <string name="game_pay_member_no_registrator">不关联报名名单</string>
    <string name="game_pay_member_no_registrator_hint">（总费用平摊到所有成员扣除）</string>
    <string name="game_pay_member_link_registrator">关联报名名单</string>
    <string name="game_registrator_upper_limit">人数上限</string>
    <string name="game_registrator_upper_limit_hint">请填写最低报名人数</string>
    <string name="game_registrator_lower_limit">人数下限</string>
    <string name="game_registrator_lower_limit_hint">默认为报名人数下限+5</string>
    <string name="game_description">活动介绍</string>
    <string name="game_description_hint">请输入本次活动的简介</string>
    <string name="game_share">活动分享</string>
    <string name="game_modify">修改活动</string>
    <string name="game_cancel">取消活动</string>
    <string name="member_name">队员：</string>
    <string name="member_on_duty_times">出勤次数：</string>
    <string name="member_points">积分：</string>
    <string name="member_join_date">加入时间：</string>
    <string name="gamer_attendee_times">活动次数：</string>
    <string name="gamer_points">积分：</string>
    <string name="find_friends">搜索好友</string>
    <string name="best_position">擅长位置：</string>
    <string name="qqzq_no">圈圈号：</string>
    <string name="my_game_count">参加活动次数</string>
    <string name="my_point">积分</string>
    <string name="my_team_count">球队数量</string>
    <string name="his_team">他得球队</string>
    <string name="gallery_comment">评论</string>
    <string name="gallery_good">点赞</string>
    <string name="game_publisher">发起人：</string>
    <string name="game_already_join">已报名：</string>
    <string name="game_remainder">剩余名额：</string>
    <string name="game_detail_location">活动地点：</string>
    <string name="game_detail_type">活动类型：</string>
    <string name="game_start_date">活动开始日期：</string>
    <string name="game_start_time">活动开始时间：</string>
    <string name="game_cost">活动费用：</string>
    <string name="game_cost_description">活动费用说明：</string>
    <string name="game_pay_type">付费方式：</string>
    <string name="game_pay_description">收费流程说明</string>
    <string name="comment">评论</string>
    <string name="chat_with_game_publisher">联系活动发起人</string>
    <string name="game_click_join">点击报名</string>
    <string name="game_cost_page_description">说明：此栏目记录由圈圈足球进行代收费的【收费活动】消费情况</string>
    <string name="game_consume_statistics">消费合计：</string>
    <string name="game_person_type">场地类型：</string>
    <string name="game_sign_up_count">报名人数：</string>
    <string name="game_average_pay">人均：</string>
    <string name="game_cost_share_type">费用分摊模式：</string>
    <string name="game_name">活动名称：</string>
    <string name="game_detail_date">活动日期：</string>
    <string name="game_detail_time">活动时间：</string>
    <string name="game_detail_publisher">活动发起人（收款人）：</string>
    <string name="game_sign_up_list">报名名单：</string>
    <string name="actual_attend_count">实际出勤人数：</string>
    <string name="attendance_member">成员</string>
    <string name="attendance_time">参赛次数</string>
    <string name="attendance_rate">出勤率</string>
    <string name="is_attend_on_this_time">本次是否出勤</string>
    <string name="game_cost_list_description">选择对应活动完成扣费后可自动统计出勤情况</string>
    <string name="sign_up_team_member">报名队员</string>
    <string name="external_player">空降人员</string>
    <string name="is_pay_on_this_time">本次是否扣费</string>
    <string name="member_fee_balance">球队余额合计：</string>
    <string name="team_common_fee_balance">球队公共资金金额：</string>
    <string name="member_fee_balance_table">队员余额表</string>
    <string name="total_fee">合计：</string>
    <string name="sponsor_donation">赞助商捐款</string>
    <string name="sponsor_donation_description">（说明：赞助商捐款收入平均分摊到所有队员头上）</string>
    <string name="member_payment">队员缴费</string>
    <string name="member_list_select">充值名单选择</string>
    <string name="charge_member_fee">充值金额</string>
    <string name="member_fee_manager_description">说明</string>
    <string name="member_fee_manager_description_hint">示例：赞助商捐款！!140字以内</string>
    <string name="confirm_income">确定收入</string>
    <string name="common_fee_pay">球队公共资金支出</string>
    <string name="link_member_list_pay">关联成员名单支出</string>
    <string name="link_member_list_hint">（根据选择名单平摊支出）</string>
    <string name="select_member">支出名单选择</string>
    <string name="pay_member_fee">支出金额</string>
    <string name="total_payout">支出总金额：</string>
    <string name="total_payout_hint">请输入支出总金额？</string>
    <string name="payout_description">支出说明：</string>
    <string name="payout_description_hint">说点什么吧！140字以内......</string>
    <string name="confirm_payout">确定支出</string>
    <string name="team_balance">球队余额：</string>
    <string name="deadline">截止时间：</string>
    <string name="balance">余额</string>
    <string name="income_subject">收入科目</string>
    <string name="income_amount">收入金额</string>
    <string name="income_user">充值球员</string>
    <string name="noter">记录人</string>
    <string name="payout_subject">支出科目</string>
    <string name="payout_amount">支出金额</string>
    <string name="payout_user">支出球员</string>
    <string name="hint_publish_team_gallery">有什么新鲜事儿，跟大家分享...</string>
    <string name="me_logo">头像</string>
    <string name="me_nickname">昵称</string>
    <string name="me_qqzq_id">圈圈号</string>
    <string name="me_sex">性别</string>
    <string name="me_location">所在地区</string>
    <string name="me_best_position">擅长位置</string>
    <string name="me_age">年龄</string>
    <string name="me_signature">个性签名：</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">载入中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">释放刷新</string>
    <string name="pull_to_refresh_footer_pull_label">上拉刷新</string>
</resources>