<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_white"
    android:orientation="vertical">

    <!-- TOP BAR-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/default_light_gray">


        <ImageView
            android:id="@+id/imageView"
            style="@style/top_bar_return_btn" />

        <TextView
            android:id="@+id/tv_create_team"
            style="@style/top_bar_middle_btn" />

        <TextView
            android:id="@+id/tv_commit"
            style="@style/top_bar_right_btn" />
    </RelativeLayout>

    <ImageView style="@style/create_page_divider" />

    <!-- 球队头像，球队名称，球队ID，常活动地点-->
    <LinearLayout
        style="@style/linearLayout_create_team_or_activity"
        android:orientation="vertical">

        <!-- 球队头像-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_create_team_title1"
                style="@style/create_team_basic_info_text_view"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/create_team_title_1" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="220dp"
                android:background="@drawable/new_team_logo" />

        </RelativeLayout>

        <!-- 球队名称-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView style="@style/create_team_basic_info_image_view" />

            <TextView
                android:id="@+id/tv_create_team_title2"
                style="@style/create_team_basic_info_text_view"
                android:text="@string/create_team_title_2" />

            <EditText
                style="@style/create_team_basic_info_edit_text"
                android:hint="@string/create_team_hint_2" />

        </LinearLayout>

        <!-- 球队ID-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView style="@style/create_team_basic_info_image_view" />

            <TextView
                android:id="@+id/tv_create_team_title3"
                style="@style/create_team_basic_info_text_view"
                android:text="@string/create_team_title_3" />

            <EditText
                style="@style/create_team_basic_info_edit_text"
                android:hint="@string/create_team_hint_3" />

        </LinearLayout>

        <!-- 常活动地点-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView style="@style/create_team_basic_info_image_view" />

            <TextView
                android:id="@+id/tv_create_team_title4"
                style="@style/create_team_basic_info_text_view"
                android:text="@string/create_team_title_4" />

            <EditText
                style="@style/create_team_basic_info_edit_text"
                android:hint="@string/create_team_hint_4" />

        </LinearLayout>

    </LinearLayout>

    <ImageView style="@style/create_page_divider" />

    <!-- 常用活动类型-->
    <LinearLayout
        style="@style/linearLayout_create_team_or_activity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_create_team_title5"
                style="@style/create_team_basic_info_text_view"
                android:layout_marginLeft="40dp"
                android:text="@string/create_team_title_5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_team_5_5p"
                android:textColor="@color/default_black" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_team_5_7p"
                android:textColor="@color/default_black" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_team_5_9p"
                android:textColor="@color/default_black" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_team_5_11p"
                android:textColor="@color/default_black" />
        </LinearLayout>
    </LinearLayout>

    <ImageView style="@style/create_page_divider" />

    <!-- 入队验证-->
    <LinearLayout
        style="@style/linearLayout_create_team_or_activity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <ImageView style="@style/create_team_basic_info_image_view" />

            <TextView
                android:id="@+id/tv_create_team_title6"
                style="@style/create_team_basic_info_text_view"
                android:text="@string/create_team_title_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_team_6_join_team_1"
                    android:textSize="16sp"
                    android:textColor="@color/default_black" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_team_6_join_team_2"
                    android:textSize="16sp"
                    android:textColor="@color/default_black" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        style="@style/create_page_divider"/>

    <!-- 球队介绍-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_create_team_title7"
            style="@style/create_team_basic_info_text_view"
            android:text="@string/create_team_title_7"/>

        <EditText
            android:id="@+id/edt_txt_team_info"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/create_team_7_hint"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            android:textColorHint="@color/default_gray" />

    </LinearLayout>
</LinearLayout>