<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_bg"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_team_1"
            android:textColor="@color/common_text_color_grey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginLeft="70dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_team_2"
            android:textColor="@color/common_text_color_grey"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/tv_create_team"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/default_white"
            android:gravity="center"
            android:text="@string/create_team"
            android:textColor="@color/common_text_color_green"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_team_3"
            android:textColor="@color/common_text_color_grey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginLeft="70dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_team_4"
            android:textColor="@color/common_text_color_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_find_team"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/default_white"
            android:gravity="center"
            android:text="@string/find_team"
            android:textColor="@color/common_text_color_green"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_team_5"
            android:textColor="@color/common_text_color_grey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginLeft="70dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_team_6"
            android:textColor="@color/common_text_color_grey"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>