<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_select_team_item"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/default_white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/income_subject"
        android:textColor="@color/rgb_153_153_153" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/income_amount"
        android:textColor="@color/rgb_153_153_153" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/income_user"
        android:textColor="@color/rgb_153_153_153" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/noter"
        android:textColor="@color/rgb_153_153_153" />


</LinearLayout>