<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/default_layout">

    <!-- TOP BAR-->
    <RelativeLayout style="@style/top_bar_layout">


        <ImageView
            android:id="@+id/imageView"
            style="@style/top_bar_return_btn" />

        <TextView
            android:id="@+id/tv_create_team"
            style="@style/top_bar_middle_btn"
            android:text="@string/top_bar_register" />

    </RelativeLayout>

    <LinearLayout
        style="@style/login_edit_layout"
        android:layout_marginTop="21dp">

        <ImageView
            style="@style/login_image_view"
            android:src="@drawable/ic_location" />

        <EditText
            style="@style/login_edit_text"
            android:hint="@string/hint_location" />
    </LinearLayout>

    <LinearLayout style="@style/login_edit_layout">

        <ImageView
            style="@style/login_image_view"
            android:src="@drawable/ic_phone_number" />

        <EditText
            style="@style/login_edit_text"
            android:hint="@string/hint_phone_number" />
    </LinearLayout>

    <LinearLayout style="@style/login_edit_layout">

        <ImageView
            style="@style/login_image_view"
            android:src="@drawable/ic_phone_number" />

        <EditText
            style="@style/login_edit_text"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_phone_verify_code" />

        <Button
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="@color/rgb_240_239_237"
            android:text="@string/txt_get_verify_code"
            android:textColor="@color/rgb_178_178_178"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout style="@style/login_edit_layout">

        <ImageView
            style="@style/login_image_view"
            android:src="@drawable/ic_password" />

        <EditText
            style="@style/login_edit_text"
            android:hint="@string/hint_password" />
    </LinearLayout>

    <LinearLayout style="@style/login_edit_layout">

        <ImageView
            style="@style/login_image_view"
            android:src="@drawable/ic_password_retype" />

        <EditText
            style="@style/login_edit_text"
            android:hint="@string/hint_password_retype" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginTop="23dp"
        android:background="@color/rgb_240_239_237"
        android:gravity="center_horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_checkbox_blue" />

        <TextView
            android:id="@+id/tv_qqzq_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/txt_sign_agreement"
            android:textColor="@color/rgb_0_0_0"
            android:textSize="15sp"
            />

    </LinearLayout>

    <Button
        style="@style/login_buttons"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login"
        android:text="@string/txt_register"
        android:textColor="@color/rgb_255_255_255" />
</LinearLayout>