<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="140dp"
    android:background="@color/grey_bg"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:textColor="@color/text_color_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_default_establish_day"
            android:textColor="@color/text_color_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/financial_statistics"
            android:textColor="@color/text_color_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/duty_statistics"
            android:textColor="@color/text_color_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duty_detail"
            android:textColor="@color/text_color_1" />
    </LinearLayout>


</LinearLayout>