<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_pop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/default_white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_alter_pic_camera"
            android:text="@string/take_photo"
            style="@style/photo_alter_item"
            />

        <TextView
            android:id="@+id/btn_alter_pic_photo"
            android:text="@string/pick_photo"
            style="@style/photo_alter_item"
            />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/logo_dialog_divider_bg" />

        <TextView
            android:id="@+id/btn_alter_exit"
            android:text="@string/cancel_photo"
            style="@style/photo_alter_item"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</RelativeLayout>